@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform {
  -String designation
}

class ManagerOfOrganization {
  -String name
  -String email
}

class Organization {
  -String name
}

class PaymentDay {
  -Date timeOfDay
  -Date dayOfMonth
}

class PaymentTransaction {
}  

Platform "1" -- "*" Organization : has registered >
Organization "1" -- "1" ManagerOfOrganization : has >
ManagerOfOrganization "1" -- "1" PaymentDay : sets >
PaymentDay "1" -- "0..*" PaymentTransaction : is related to >

@enduml